  * Depend on 'aliased'.

0.35  Tue, 23 Aug 2011 13:13:10 +0200
  * Adapt to changes in MooseX::Role::Parameterized 0.27.

0.34  Wed, 01 Sep 2010 01:10:28 +0200
  * Depend on MooseX::MooseX::Signatures 0.36 to avoid deprecation warnings on
    new versions of Moose (Jeremy Carman).

0.33  Thu, 04 Feb 2010 02:50:14 +0100
  * Depend on MooseX::Method::Signatures 0.30 to fix various incompatibilities.

0.32  Mon, 02 Nov 2009 03:00:42 +0100
  * Add link to Geany syntax notes to documentation (Michele Beltrame).
  * Convert from MooseX::MethodAttributes to Native::Trait (Justin Hunter).
  * Update dependency on MooseX::Types (Chris Prather).

0.31  Thu, 17 Sep 2009 18:10:22 +0200
  * Bump dependencies for no more warnings on new Moose versions.

0.30  Sat, 05 Sep 2009 02:48:05 +0200
  * Make the attr inheriting TODO test work.
  * Make default values for role parameters work (nperez).
  * Add tests for the above (nperez).

0.29  Mon, 31 Aug 2009 19:11:25 +0200
  * Add failing test for applying modifiers to a method directly composed from
    a role (nperez).
  * Fix the failing test by depending on MXMS 0.24.

0.28  Thu, 27 Aug 2009 22:44:34 +0200
  * Bump prereqs on MooseX::Method::Signatures, Moose, and namespace::clean in
    order to avoid test failure.

0.27  Tue, 18 Aug 2009 08:54:22 +0200
  * Depend on MooseX::Method::Signatures 0.21 to make sure type aliasing works
    and there are no warnings due to the recent MooseX::LazyRequire changes.

0.26  Sun, 16 Aug 2009 14:48:12 +0200
  * Declare dependency on MooseX::AttributeHelpers.

0.25  Sun, 16 Aug 2009 05:31:59 +0200
  * Don't persist the inner keywords over more than one invocation of the declarator.
  * Pass along the current context to import_symbols_from and imported_moose_symbols.
  * Implement parameterizable roles.

0.24  Sat, 15 Aug 2009 23:48:09 +0200
  * Add repository and bugtracker to Makefile.PL (Ash Berlin).
  * Tests and doc fixes on applying multiple roles at once (Chas. J. Owens IV).