@@ -4,7 +4,7 @@ use strict;
 use warnings;
 
 use Test::More tests => 23;
-use Test::Exception;
+use Test::Fatal;
 
 use MooseX::Declare;
 
@@ -39,9 +39,9 @@ my $savings_account = BankAccount->new(balance => 250);
 isa_ok($savings_account, 'BankAccount');
 
 is($savings_account->balance, 250, '... got the right savings balance');
-lives_ok {
-    $savings_account->withdraw(50);
-} '... withdrew from savings successfully';
+is( exception {
+	$savings_account->withdraw(50);
+}, undef, '... withdrew from savings successfully');
 is($savings_account->balance, 200, '... got the right savings balance after withdrawl');
 
 $savings_account->deposit(150);
@@ -59,15 +59,15 @@ is($savings_account->balance, 350, '... got the right savings balance after depo
 
     is($checking_account->balance, 100, '... got the right checkings balance');
 
-    lives_ok {
-        $checking_account->withdraw(50);
-    } '... withdrew from checking successfully';
+    is( exception {
+    	$checking_account->withdraw(50);
+    }, undef, '... withdrew from checking successfully');
     is($checking_account->balance, 50, '... got the right checkings balance after withdrawl');
     is($savings_account->balance, 350, '... got the right savings balance after checking withdrawl (no overdraft)');
 
-    lives_ok {
-        $checking_account->withdraw(200);
-    } '... withdrew from checking successfully';
+    is( exception {
+    	$checking_account->withdraw(200);
+    }, undef, '... withdrew from checking successfully');
     is($checking_account->balance, 0, '... got the right checkings balance after withdrawl');
     is($savings_account->balance, 200, '... got the right savings balance after overdraft withdrawl');
 }
@@ -84,14 +84,14 @@ is($savings_account->balance, 350, '... got the right savings balance after depo
 
     is($checking_account->balance, 100, '... got the right checkings balance');
 
-    lives_ok {
-        $checking_account->withdraw(50);
-    } '... withdrew from checking successfully';
+    is( exception {
+    	$checking_account->withdraw(50);
+    }, undef, '... withdrew from checking successfully');
     is($checking_account->balance, 50, '... got the right checkings balance after withdrawl');
 
-    dies_ok {
-        $checking_account->withdraw(200);
-    } '... withdrawl failed due to attempted overdraft';
+    isnt( exception {
+    	$checking_account->withdraw(200);
+    }, undef, '... withdrawl failed due to attempted overdraft');
     is($checking_account->balance, 50, '... got the right checkings balance after withdrawl failure');
 }
 
