@@ -4,7 +4,6 @@ use strict;
 use warnings;
 
 use Test::More tests => 2;
-use Test::Exception;
 
 use MooseX::Declare;
 
